# mem-cleaner

./: .rust-analyzer.json  Cargo.toml
src/: main.rs
