[package]
name = "mem_cleaner"
version = "0.2.0"
edition = "2021"

[dependencies]
nix = { version = "0.28", default-features = false, features = ["time", "signal", "fs"] }
time = { version = "0.3", default-features = false, features = ["formatting", "local-offset", "macros", "std"] }
fxhash = "0.2"
itoa = "1.0"

[profile.release]
opt-level = "z"
lto = "fat"        # 更激进的 LTO，可能比 true 更小
panic = "abort"
strip = "symbols"
codegen-units = 1
incremental = false
debug = false
rpath = false       # 禁止生成运行时搜索路径